<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/tomboltalsun"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:text="@string/talatah_dan_susunan_basarah_tombultext"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tomdotam"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/doa_tamparan_basarah_tomboltext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tomboltalsun" />

    <Button
        android:id="@+id/tomkabas"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/doa_kahapus_basarah_tomboltext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tomdotam" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tomkabas"
        app:layout_constraintVertical_bias="0.965"
        app:srcCompat="@drawable/batanggaringv4"
        android:contentDescription="@string/batanggaring_img_on_total" />
</androidx.constraintlayout.widget.ConstraintLayout>