<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/appimg"
        android:layout_width="115dp"
        android:layout_height="126dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/batanggaringv4" />

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appname"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appimg" />

    <TextView
        android:id="@+id/appversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/versioncode"
        android:textAlignment="center"
        android:textSize="11sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appname" />

    <TextView
        android:id="@+id/descriplib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:text="@string/aidd"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/kotlinlogo"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriplib"
        app:srcCompat="@drawable/kotlinlogov2" />

    <TextView
        android:id="@+id/kotlintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/kotlinname"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/kotlinlogo"
        app:layout_constraintTop_toBottomOf="@+id/descriplib" />

    <ImageView
        android:id="@+id/androidstudiologo"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/kotlintext"
        app:layout_constraintTop_toBottomOf="@+id/descriplib"
        app:srcCompat="@drawable/androstudio" />

    <TextView
        android:id="@+id/androstutext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/android_studioname"
        app:layout_constraintStart_toEndOf="@+id/androidstudiologo"
        app:layout_constraintTop_toBottomOf="@+id/descriplib" />

    <TextView
        android:id="@+id/texthub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="312dp"
        android:text="@string/texthub"
        android:textSize="11sp"
        android:textStyle="normal|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/juddev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/devtitle"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texthub" />

    <ImageView
        android:id="@+id/telegramico"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/juddev"
        app:srcCompat="@drawable/telelogov2" />

    <ImageView
        android:id="@+id/facebooklogo"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telegramico"
        app:srcCompat="@drawable/fblogov2" />

    <TextView
        android:id="@+id/telegram_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:autoLink="all"
        android:linksClickable="true"
        android:text="@string/teleid"
        app:layout_constraintStart_toEndOf="@+id/telegramico"
        app:layout_constraintTop_toBottomOf="@+id/juddev" />

    <TextView
        android:id="@+id/fbidtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/fbname"
        app:layout_constraintStart_toEndOf="@+id/facebooklogo"
        app:layout_constraintTop_toBottomOf="@+id/telegram_link" />


</androidx.constraintlayout.widget.ConstraintLayout>